syntax = "proto3";

option csharp_namespace = "Basics";

package basics;

service FirstServiceDefinition {
	rpc Unary(Request) returns (Response);
	rpc ClientStream(stream Request) returns (Response);
	rpc ServerStream(Request) returns (stream Response);
	rpc BiDirectionalStream(stream Request) returns (stream Response);
}

message Request {
	string Content = 1;
}

message Response {
	string Message = 1;
}